Refactor parameter initialization and parsing in OSRM bindings
- Updated TableParameters, TileParameters, and TripParameters to use kwargs for initialization, improving flexibility and readability.
- Introduced parse_helpers for parsing string inputs into enum types for various parameters, enhancing code maintainability.
- Replaced boost::optional with std::optional across multiple files for modern C++ compliance.
- Simplified enum class definitions for Approach and other parameter types, removing unnecessary constructors.
- Improved error handling and validation for parameter inputs, ensuring clearer error messages for invalid configurations.
- Added comprehensive documentation for new parameter parsing functions.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,7 +93,7 @@ else()
   FetchContent_Declare(
     libosrm
     GIT_REPOSITORY https://github.com/Project-OSRM/osrm-backend
-    GIT_TAG d4dc297f75b574f0236eb8ea08670082d2493719 # 6905 May 27
+    GIT_TAG v6.0.0 #d4dc297f75b574f0236eb8ea08670082d2493719 # 6905 May 27
     GIT_SUBMODULES ""
   )
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-array-bounds -Wno-uninitialized -Wno-free-nonheap-object")
