--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["scikit-build-core >=0.4.3", "nanobind >=1.8.0"]
+requires = ["scikit-build-core >=0.4.3", "nanobind >=2.0.0"]
 build-backend = "scikit_build_core.build"
 
 [project]
@@ -7,7 +7,7 @@ name = "osrm-bindings"
 version = "0.0.1"
 description = "Python bindings for the osrm-backend project"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.13"
 license = { file = "LICENSE" }
 
 [project.urls]
@@ -17,12 +17,13 @@ repository = "https://github.com/gis-ops/py-osrm"
 [tool.scikit-build]
 minimum-version = "0.4"
 build-dir = "build/{wheel_tag}"
-wheel.py-api = "cp312"
+wheel.py-api = "cp313"
 wheel.packages = ["src/osrm", "src/bin"]
 
 [tool.cibuildwheel]
 archs = ["native"]
-build = "cp*"
+# Restrict builds to CPython 3.13 wheels only
+build = "cp313-*"
 build-verbosity = 1
 skip = "*musllinux*"
 manylinux-x86_64-image = "ghcr.io/gis-ops/manylinux:2_28_osrm_python"
