Enhance CMake configuration and improve JSON handling in OSRM bindings
- Updated CMakeLists.txt to resolve Boost dependencies and improve library linking.
- Added Python object conversion for OSRM json::Value and json::Object in jsoncontainer_nb.h and jsoncontainer_nb.cpp.
- Enhanced error handling in JSON object access methods.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,11 +88,127 @@ list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 find_package(LibOSRM)
 
 if(LibOSRM_FOUND)
-  target_link_libraries(${EXT_NAME}
-    PRIVATE
-      ${LibOSRM_LIBRARIES}
-      ${LibOSRM_DEPENDENT_LIBRARIES}
-  )
+  # Snapshot original libs so we can safely mutate list variables
+  set(_ORIG_LIBOSRM_LIBRARIES "${LibOSRM_LIBRARIES}")
+  set(_ORIG_LIBOSRM_DEP_LIBS "${LibOSRM_DEPENDENT_LIBRARIES}")
+  # Resolve any Boost::component entries to actual libraries when imported targets are unavailable
+  # (CMake 4 removed FindBoost module unless CMP0167 policy handled; Homebrew Boost may lack config files).
+  foreach(_comp date_time iostreams random regex system thread)
+    if(NOT TARGET Boost::${_comp})
+      # Check if the token appears in LibOSRM_LIBRARIES list
+      list(FIND LibOSRM_LIBRARIES "Boost::${_comp}" _idx)
+      if(_idx GREATER -1)
+        # Try to locate the real library
+        find_library(BOOST_${_comp}_LIB NAMES boost_${_comp}
+          HINTS /opt/homebrew/opt/boost@1.89 /opt/homebrew /usr/local /usr
+          PATH_SUFFIXES lib)
+        if(BOOST_${_comp}_LIB)
+          list(REMOVE_AT LibOSRM_LIBRARIES ${_idx})
+          list(APPEND LibOSRM_LIBRARIES ${BOOST_${_comp}_LIB})
+          message(STATUS "Resolved Boost::${_comp} -> ${BOOST_${_comp}_LIB}")
+        else()
+          message(WARNING "Could not resolve Boost::${_comp}; attempting fallback -lboost_${_comp}")
+          list(REMOVE_AT LibOSRM_LIBRARIES ${_idx})
+          list(APPEND LibOSRM_LIBRARIES -lboost_${_comp})
+        endif()
+      endif()
+    endif()
+  endforeach()
+
+  # Augment with pkg-config libs directly (more reliable than parsed variables that may contain Boost:: tokens)
+  find_program(PKG_CONFIG_EXECUTABLE pkg-config)
+  if(PKG_CONFIG_EXECUTABLE)
+    execute_process(COMMAND ${PKG_CONFIG_EXECUTABLE} --libs libosrm OUTPUT_VARIABLE _PKG_LIBS OUTPUT_STRIP_TRAILING_WHITESPACE)
+    if(_PKG_LIBS)
+      separate_arguments(_PKG_LIBS_LIST NATIVE_COMMAND "${_PKG_LIBS}")
+      list(APPEND LibOSRM_LIBRARIES ${_PKG_LIBS_LIST})
+    endif()
+  endif()
+
+  # Deduplicate list
+  list(REMOVE_DUPLICATES LibOSRM_LIBRARIES)
+
+  # Ensure critical Boost libs are present; add them if missing.
+  # Treat boost_system as optional (header-only in some builds); include others as required
+  set(_OPTIONAL_BOOST_LIBS system)
+  set(_REQUIRED_BOOST_LIBS thread iostreams date_time regex random filesystem chrono)
+  foreach(_rb ${_REQUIRED_BOOST_LIBS} ${_OPTIONAL_BOOST_LIBS})
+    set(_found FALSE)
+    foreach(_entry ${LibOSRM_LIBRARIES})
+      if(_entry MATCHES "boost_${_rb}(\\.|$)" OR _entry STREQUAL "-lboost_${_rb}")
+        set(_found TRUE)
+      endif()
+    endforeach()
+    if(NOT _found)
+      # Try locate full path
+      find_library(BOOST_${_rb}_LIB NAMES boost_${_rb}-mt boost_${_rb} HINTS /opt/homebrew/opt/boost@1.89 /opt/homebrew/opt/boost /opt/homebrew /usr/local /usr PATH_SUFFIXES lib lib64)
+      if(BOOST_${_rb}_LIB)
+        list(APPEND LibOSRM_LIBRARIES ${BOOST_${_rb}_LIB})
+        message(STATUS "Added missing Boost lib: ${BOOST_${_rb}_LIB}")
+      else()
+        if(NOT _rb IN_LIST _OPTIONAL_BOOST_LIBS)
+          list(APPEND LibOSRM_LIBRARIES -lboost_${_rb})
+          message(WARNING "Falling back to -lboost_${_rb} (full path not found)")
+        else()
+          message(STATUS "Skipping boost_${_rb} (header-only / not built)")
+        endif()
+      endif()
+    endif()
+  endforeach()
+
+  # Replace any lingering -lboost_* flags with absolute paths if we can now find them (especially boost_system)
+  foreach(_rb ${_REQUIRED_BOOST_LIBS} ${_OPTIONAL_BOOST_LIBS})
+    foreach(_entry ${LibOSRM_LIBRARIES})
+      if(_entry STREQUAL "-lboost_${_rb}")
+        find_library(BOOST_${_rb}_LIB_RE NAMES boost_${_rb}-mt boost_${_rb} HINTS /opt/homebrew/opt/boost@1.89 /opt/homebrew/opt/boost /opt/homebrew /usr/local /usr PATH_SUFFIXES lib lib64)
+        if(BOOST_${_rb}_LIB_RE)
+          list(REMOVE_ITEM LibOSRM_LIBRARIES "-lboost_${_rb}")
+          list(APPEND LibOSRM_LIBRARIES ${BOOST_${_rb}_LIB_RE})
+          message(STATUS "Resolved fallback -lboost_${_rb} -> ${BOOST_${_rb}_LIB_RE}")
+        elseif(_rb IN_LIST _OPTIONAL_BOOST_LIBS)
+          # Remove placeholder entirely for optional libs if still unresolved
+          list(REMOVE_ITEM LibOSRM_LIBRARIES "-lboost_${_rb}")
+          message(STATUS "Removed unresolved optional -lboost_${_rb}")
+        endif()
+      endif()
+    endforeach()
+  endforeach()
+
+  # Final de-duplication
+  list(REMOVE_DUPLICATES LibOSRM_LIBRARIES)
+
+  # Hardcode Homebrew boost@1.89 absolute library paths if brew prefix is available
+  if(APPLE AND NOT DEFINED ENV{OSRM_SKIP_HARDCODE_BOOST})
+    find_program(BREW_EXECUTABLE brew)
+    if(BREW_EXECUTABLE)
+      execute_process(COMMAND ${BREW_EXECUTABLE} --prefix boost@1.89 OUTPUT_VARIABLE _BREW_BOOST_PREFIX OUTPUT_STRIP_TRAILING_WHITESPACE ERROR_QUIET)
+      if(_BREW_BOOST_PREFIX AND EXISTS "${_BREW_BOOST_PREFIX}/lib")
+        set(_BOOST_LIB_DIR "${_BREW_BOOST_PREFIX}/lib")
+        set(_BOOST_LIBS_ABS system thread iostreams date_time regex random filesystem chrono)
+        foreach(_bl ${_BOOST_LIBS_ABS})
+          set(_cand "${_BOOST_LIB_DIR}/libboost_${_bl}.dylib")
+          if(EXISTS "${_cand}")
+            # Remove any -lboost_<lib> placeholders
+            list(FILTER LibOSRM_LIBRARIES EXCLUDE REGEX "^-lboost_${_bl}$")
+            # Append if not already present
+            list(FIND LibOSRM_LIBRARIES "${_cand}" _already)
+            if(_already EQUAL -1)
+              list(APPEND LibOSRM_LIBRARIES "${_cand}")
+              message(STATUS "Hardcoded Boost library: ${_cand}")
+            endif()
+          endif()
+        endforeach()
+      endif()
+    endif()
+  endif()
+  # Remove any residual Boost:: tokens (unresolved) to prevent CMake error; they will have been replaced or dropped
+  list(FILTER LibOSRM_LIBRARIES EXCLUDE REGEX "^Boost::")
+  list(FILTER LibOSRM_DEPENDENT_LIBRARIES EXCLUDE REGEX "^Boost::")
+
+  message(STATUS "Using LibOSRM libraries: ${LibOSRM_LIBRARIES}")
+  message(STATUS "Using LibOSRM dependent libraries: ${LibOSRM_DEPENDENT_LIBRARIES}")
+
+  target_link_libraries(${EXT_NAME} PRIVATE ${LibOSRM_LIBRARIES} ${LibOSRM_DEPENDENT_LIBRARIES})
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LibOSRM_CXXFLAGS}")
 
   file(GLOB OSRM_EXECS ${LibOSRM_EXEC_DIR}/osrm-*)
